# Client-Server-Group-5-Project

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
BingoGame/: binggame.h  bingogame.h  bingoname.h
Client/: .gitignore  CMakeLists.txt  client.cpp
Client-Project/: .gitignore  CMakeLists.txt  Client.h  aclient.cpp  aclient.h  client.cpp  client.h  main.cpp  windowsClient.cpp
Client-Project-2/: CMakeLists.txt  client.cpp
Common/: Item.h  Socket.cpp  Socket.h  asocket.cpp  socket.cpp  socket.h
Server/: CMakeLists.txt  server.cpp
Server-Project/: .gitignore  CMakeLists.txt  LocalContext.h  Server.h  aserver.h  authenticator.h  basic_test.cpp  calculator.h  gamemanager.h  globalcontext.h  localcontext.h  main.cpp  sample3-inl.h  sampleServer.h  server.cpp  server.h  windowsServer.cpp  wsattemp1.cpp
Server-Project-2/: CMakeLists.txt  server.cpp
Test-Project/: BasicTest.cpp  BingoGameTest.cpp  CMakeLists.txt  ClientTest.cpp  ServerTest.cpp  SocketTest.cpp
Thread-Project/: CMakeLists.txt  main.cpp
